--- a/scss.scss
+++ b/scss.scss
@@ -8,7 +8,10 @@
     margin: 0 auto;
 }
 
-body {}
+body {
+    font-size: 21px;
+    color: #fff;
+}
 
 ul,
 li {
@@ -19,15 +22,80 @@ img {
     width: 100%;
     height: 100%;
 }
+
+.top {
+    background-repeat: no-repeat;
+    max-width: 821px;
+    margin: 0 auto;
+}
+
 .background {
     position: absolute;
+    z-index: -1;
+    // height: unset;
+    // width: unset;
 }
+
 .header__top {
-    span,.coordinate {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 0;
+
+    span,
+    .coordinate {
         color: #fff;
     }
-    .coordinate {
-       
 
+    .right__side {
+        display: flex;
+        align-items: center;
+        gap: 100px;
+    }
+
+    .coordinate {
+        font-family: Montserrat;
+        font-style: Regular;
+        font-size: 12px;
+        position: relative;
+
+        span {
+            display: inherit;
+            text-align: center;
+            width: 99px;
+        }
+
+        span:first-child {
+            font-size: 21px;
+        }
+
+        .coordinat__img {
+            position: absolute;
+        }
+
+    }
+
+    .tellephone span {
+        display: inherit;
+        text-align: center;
+
+    }
+
+    .tell {
+        font-size: 20px;
+
+        .phone {
+            height: 10px;
+            width: 10px;
+        }
+    }
+
+    .coordinat__img {
+        width: 10px;
+        height: 10px;
+    }
+
+    .time_worck {
+        font-size: 15px;
     }
 }
