--- a/scss.css
+++ b/scss.css
@@ -5,7 +5,7 @@
 .container {
   max-width: 1928px;
   margin: 0 auto;
-  position: relative;
+  padding: 0 163px;
 }
 
 body {
@@ -19,256 +19,282 @@ li {
   list-style: none;
 }
 
+body {
+  font-family: 'Josefin Sans';
+  font-style: normal;
+}
+
 img {
   width: 100%;
   height: 100%;
 }
 
+.logo {
+  color: #FFFFFF;
+  font-family: 'Josefin Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 36px;
+  padding: 51px 0;
+}
+.logo span {
+  color: #FEDB62;
+}
+
+.backround {
+  background: linear-gradient(108.13deg, #320000 1%, #0F0323 37.66%, #322204 72.27%, #000230 98.74%);
+}
+
 .top {
-  background-repeat: no-repeat;
-  max-width: 1087px;
-  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-
-.background {
-  position: absolute;
-  z-index: -1;
+.top .btn {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 28px;
+  /* identical to box height, or 156% */
+  color: rgba(255, 255, 255, 0.75);
+  margin-bottom: 61px;
 }
-
-.berry_1,
-.berry_2,
-.berry_3 {
-  position: absolute;
-  width: 100px;
-  height: 100px;
+.top .btn img {
+  width: 40px;
+  height: 10px;
 }
-
-.berry_1 {
-  left: 0;
-  top: 200px;
+.top .left {
+  line-height: 35px;
+  max-width: 456px;
 }
-
-.berry_2 {
-  right: 0;
-  top: 109px;
+.top .left .catigory {
+  font-family: 'Josefin Sans';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 33px;
+  /* or 138% */
+  letter-spacing: 0.1em;
+  color: #FFFFFF;
 }
-
-.berry_3 {
-  right: 173px;
-  bottom: 88px;
+.top .title {
+  margin-top: 25px;
+  font-family: 'Josefin Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 80px;
+  line-height: 80px;
+  /* or 100% */
+  letter-spacing: 0.1em;
+  color: #FFFFFF;
+  opacity: 0.75;
 }
-
-.header__top {
+.top .text {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  /* or 175% */
+  margin: 25px 0;
+  letter-spacing: -0.02em;
+  color: rgba(255, 255, 255, 0.75);
+}
+.top .active_users {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 30px 0;
 }
-.header__top span,
-.header__top .coordinate {
-  color: #fff;
-}
-.header__top .right__side {
-  display: flex;
-  align-items: center;
-  gap: 100px;
-}
-.header__top .coordinate {
-  font-family: Montserrat;
-  font-style: Regular;
-  font-size: 12px;
+
+.right {
   position: relative;
 }
-.header__top .coordinate span {
-  display: inherit;
-  text-align: center;
-  width: 99px;
-}
-.header__top .coordinate span:first-child {
-  font-size: 21px;
-}
-.header__top .coordinate .coordinat__img {
+.right .rectangle {
   position: absolute;
-}
-.header__top .tellephone span {
-  display: inherit;
-  text-align: center;
-}
-.header__top .tell {
-  font-size: 20px;
-}
-.header__top .tell .phone {
-  height: 10px;
-  width: 10px;
-}
-.header__top .coordinat__img {
-  width: 10px;
-  height: 10px;
-}
-.header__top .time_worck {
-  font-size: 15px;
+  left: -17px;
 }
 
-.text__content {
-  max-width: 624px;
-  margin-top: 200px;
+.slider__top {
+  display: flex;
+  gap: 31px;
+  position: relative;
+  margin-top: 65px;
 }
-.text__content .btn_top {
-  background-color: #fff;
-  color: silver;
-  padding: 10px 20px;
-  border-radius: 10px;
-  text-align: center;
-  max-width: 142px;
-}
-.text__content .text {
+.slider__top .title__ {
+  position: absolute;
+  top: -65px;
+  font-family: 'Josefin Sans';
+  font-style: normal;
   font-weight: 700;
-  font-size: 48px;
-  margin: 10px 0;
-}
-.text__content .text_bottom {
-  font-size: 24px;
-  margin-bottom: 40px;
-  text-align: left;
-  opacity: 0.7;
-}
-.text__content .container_text__bottom {
-  display: flex;
-  align-items: center;
-}
-.text__content .container_text__bottom .btn {
-  padding: 20px 30px;
-  background-color: #FED84C;
-  color: #2E363E;
-  border-radius: 10px;
-}
-.text__content .container_text__bottom .text__bot {
-  font-size: 15px;
-  padding: 20px;
-  text-align: left;
-  opacity: 0.7;
+  font-size: 36px;
+  line-height: 62px;
+  /* identical to box height, or 172% */
+  color: rgba(255, 255, 255, 0.75);
 }
 
-.center__block {
-  color: #2E363E;
+.product {
+  max-width: 258px;
+  border-radius: 10px;
+  line-height: 0;
+}
+.product .content__product {
+  text-align: left;
+  background-color: rgba(255, 255, 255, 0.2);
+  padding: 17px;
   border-radius: 10px;
 }
-.center__block h1 {
-  text-align: center;
-  color: #2E363E;
+.product .content__product .title {
+  font-family: 'Josefin Sans';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  margin-top: 14px;
+  color: rgba(255, 255, 255, 0.75);
 }
-.center__block .product__set {
+.product .content__product .catigory {
+  font-family: 'Josefin Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 12px;
+  /* identical to box height */
+  text-transform: capitalize;
+  margin: 20px 0;
+  color: rgba(255, 255, 255, 0.6);
+}
+.product .content__product .price__ {
   display: flex;
-  gap: 50px;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
+  align-items: center;
+  margin: 20px 0;
 }
-.center__block .product {
-  width: 380px;
-  border: 1px solid #F2F6FA;
-  border-radius: 20px;
+.product .content__product .price__ span {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  text-transform: capitalize;
+  color: #FFFFFF;
 }
-.center__block .title {
-  font-size: 24px;
-  font-weight: bold;
-}
-.center__block .text {
+.product .content__product .price__ .price {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
   font-size: 16px;
   line-height: 24px;
-  opacity: 0.7;
-  margin: 20px 0;
+  color: #FFFFFF;
 }
-.center__block .price {
-  font-size: 24px;
+.product .content__product .price__ .price img {
+  height: 24px;
+  width: 15px;
 }
-.center__block .btn__by {
-  display: inline-flex;
-  padding: 10px 20px;
-  background-color: #FED84C;
-  color: #2E363E;
-  border-radius: 10px;
-  margin: 20px 0;
-}
-.center__block .product__info {
-  padding-left: 30px;
-  padding-top: 30px;
-}
-
-.center__zakaz {
-  position: relative;
-  height: 1049px;
-  background-color: #081130;
-  margin-top: 60px;
-}
-.center__zakaz img {
-  position: absolute;
-  width: unset;
-  height: unset;
-}
-.center__zakaz .top {
-  top: 0;
-  min-width: 100%;
-}
-.center__zakaz .bottom {
-  bottom: 0;
-  z-index: 2;
-  width: 100%;
-}
-.center__zakaz .phone {
-  left: 0;
-  height: 70%;
-  bottom: 0;
-}
-.center__zakaz .leaf {
-  top: 60px;
-  left: 460px;
-}
-.center__zakaz .berry_phone {
-  right: 150px;
-  top: 300px;
-}
-.center__zakaz .text__content {
-  max-width: 624px;
-  margin-top: 200px;
-  position: absolute;
-  right: 92px;
-  top: 130px;
-}
-.center__zakaz .text__content .btn_top {
-  display: inline;
-  background-color: #fff;
-  color: silver;
-  padding: 10px 20px;
-  border-radius: 10px;
-  text-align: center;
-}
-.center__zakaz .text__content .text {
-  font-weight: 700;
-  font-size: 48px;
-  margin: 30px 0;
-  line-height: 40px;
-}
-.center__zakaz .text__content .text_bottom {
-  font-size: 24px;
-  margin-bottom: 40px;
-  text-align: left;
-  opacity: 0.7;
-}
-.center__zakaz .text__content .container_text__bottom {
+.product .btn_like__bye {
   display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
 }
-.center__zakaz .text__content .container_text__bottom .btn {
-  padding: 20px 30px;
-  background-color: #FED84C;
-  color: #2E363E;
-  border-radius: 10px;
+.product .btn_like__bye img {
+  height: 20px;
+  width: 20px;
 }
-.center__zakaz .text__content .container_text__bottom .text__bot {
-  font-size: 15px;
-  padding: 20px;
-  text-align: left;
-  opacity: 0.7;
+.product .btn_like__bye .btn__ {
+  border-radius: 5px;
+  padding: 5px 17px;
+  background-color: #FDC500;
+  color: #000000;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  /* identical to box height */
+  text-align: center;
+  color: #000000;
+}
+
+.subscribe {
+  margin-top: 128px;
+}
+.subscribe .title {
+  font-family: 'Josefin Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 62px;
+  /* identical to box height, or 129% */
+  text-align: center;
+  color: rgba(255, 255, 255, 0.75);
+}
+.subscribe .text {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  /* or 156% */
+  text-align: center;
+  margin-top: 6px;
+  color: rgba(255, 255, 255, 0.5);
+  padding: 0 329px;
+}
+
+.input-group {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin-top: 39px;
+}
+
+.input {
+  border: solid 1.5px #9e9e9e;
+  width: 100%;
+  border-radius: 50px;
+  background: none;
+  padding: 1rem;
+  font-size: 1rem;
+  color: #f5f5f5;
+  transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.user-label {
+  position: absolute;
+  left: 93px;
+  color: #e8e8e8;
+  pointer-events: none;
+  transform: translateY(1rem);
+  transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input:focus,
+input:valid {
+  outline: none;
+  border: 1.5px solid #1a73e8;
+}
+
+.input:focus ~ label,
+input:valid ~ label {
+  transform: translateY(-50%) scale(0.8);
+  background-color: #212121;
+  padding: 0 .2em;
+  color: #2196f3;
+}
+
+.send__input {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background-color: #fff;
+  color: #000000;
+  font-size: 18px;
+  border-radius: 50px;
+  padding: 15px 39px;
 }
 
 /*# sourceMappingURL=scss.css.map */
