--- a/scss.scss
+++ b/scss.scss
@@ -6,7 +6,7 @@
 .container {
     max-width: 1928px;
     margin: 0 auto;
-    position: relative;
+    padding: 0 163px;
 }
 
 body {
@@ -20,305 +20,328 @@ li {
     list-style: none;
 }
 
+body {
+    font-family: 'Josefin Sans';
+    font-style: normal;
+
+
+}
+
 img {
     width: 100%;
     height: 100%;
 }
 
+.logo {
+    color: #FFFFFF;
+    font-family: 'Josefin Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 36px;
+    padding: 51px 0;
+
+    span {
+        color: #FEDB62;
+    }
+}
+
+.backround {
+    background: linear-gradient(108.13deg, #320000 1%, #0F0323 37.66%, #322204 72.27%, #000230 98.74%);
+}
+
 .top {
-    background-repeat: no-repeat;
-    max-width: 1087px;
-    margin: 0 auto;
-}
-
-.background {
-    position: absolute;
-    z-index: -1;
-    // height: unset;
-    // width: unset;
-}
-
-.berry_1,
-.berry_2,
-.berry_3 {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-}
-
-.berry_1 {
-    left: 0;
-    top: 200px;
-}
-
-.berry_2 {
-    right: 0;
-    top: 109px;
-}
-
-.berry_3 {
-    right: 173px;
-    bottom: 88px;
-}
-
-.header__top {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 30px 0;
+    justify-content: space-between;
 
-    span,
-    .coordinate {
-        color: #fff;
-    }
 
-    .right__side {
-        display: flex;
-        align-items: center;
-        gap: 100px;
-    }
+    .btn {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 28px;
+        /* identical to box height, or 156% */
 
-    .coordinate {
-        font-family: Montserrat;
-        font-style: Regular;
-        font-size: 12px;
-        position: relative;
 
-        span {
-            display: inherit;
-            text-align: center;
-            width: 99px;
-        }
+        color: rgba(255, 255, 255, 0.75);
+        margin-bottom: 61px;
 
-        span:first-child {
-            font-size: 21px;
-        }
-
-        .coordinat__img {
-            position: absolute;
-        }
-
-    }
-
-    .tellephone span {
-        display: inherit;
-        text-align: center;
-
-    }
-
-    .tell {
-        font-size: 20px;
-
-        .phone {
+        img {
+            width: 40px;
             height: 10px;
-            width: 10px;
         }
     }
 
-    .coordinat__img {
-        width: 10px;
-        height: 10px;
-    }
+    .left {
+        line-height: 35px;
+        max-width: 456px;
 
-    .time_worck {
-        font-size: 15px;
-    }
-}
+        .catigory {
+            font-family: 'Josefin Sans';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 24px;
+            line-height: 33px;
+            /* or 138% */
 
-.text__content {
-    max-width: 624px;
-    margin-top: 200px;
+            letter-spacing: 0.1em;
 
-    .btn_top {
-        background-color: #fff;
-        color: silver;
-        padding: 10px 20px;
-        border-radius: 10px;
-        text-align: center;
-        max-width: 142px;
-    }
-
-    .text {
-        font-weight: 700;
-        font-size: 48px;
-        margin: 10px 0;
-    }
-
-    .text_bottom {
-
-        font-size: 24px;
-        margin-bottom: 40px;
-        text-align: left;
-        opacity: 0.7;
-    }
-
-    .container_text__bottom {
-        display: flex;
-        align-items: center;
-
-        .btn {
-            padding: 20px 30px;
-            background-color: #FED84C;
-            color: #2E363E;
-            border-radius: 10px;
-
+            color: #FFFFFF;
 
         }
-
-        .text__bot {
-            font-size: 15px;
-            padding: 20px;
-            text-align: left;
-            opacity: 0.7;
-        }
-    }
-}
-
-.center__block {
-    color: #2E363E;
-    border-radius: 10px;
-
-    h1 {
-        text-align: center;
-        color: #2E363E;
-    }
-
-    .product__set {
-        display: flex;
-        gap: 50px;
-        justify-content: center;
-        flex-wrap: wrap;
-    }
-
-    .product {
-        width: 380px;
-        border: 1px solid #F2F6FA;
-        border-radius: 20px;
     }
 
     .title {
-        font-size: 24px;
-        font-weight: bold;
+        margin-top: 25px;
+        font-family: 'Josefin Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 80px;
+        line-height: 80px;
+        /* or 100% */
 
+        letter-spacing: 0.1em;
+
+        color: #FFFFFF;
+
+        opacity: 0.75;
     }
 
     .text {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
         font-size: 16px;
-        line-height: 24px;
-        opacity: 0.7;
-        margin: 20px 0;
+        line-height: 28px;
+        /* or 175% */
+        margin: 25px 0;
+        letter-spacing: -0.02em;
+
+        color: rgba(255, 255, 255, 0.75);
+
     }
 
-    .price {
-        font-size: 24px;
+    .active_users {
+        display: flex;
+        justify-content: space-between;
     }
 
-    .btn__by {
-        display: inline-flex;
-        padding: 10px 20px;
-        background-color: #FED84C;
-        color: #2E363E;
-        border-radius: 10px;
-        margin: 20px 0;
-    }
+}
 
-    .product__info {
-        padding-left: 30px;
-        padding-top: 30px;
+.right {
+    position: relative;
+
+    .rectangle {
+        position: absolute;
+        left: -17px;
     }
 }
 
-.center__zakaz {
+.slider__top {
+    display: flex;
+    gap: 31px;
     position: relative;
-    height: 1049px;
-    background-color: #081130;
-    margin-top: 60px;
-    img {
+    margin-top: 65px;
+
+    .title__ {
         position: absolute;
-        width: unset;
-        height: unset;
-    }
-
-    .top {
-        top: 0;
-        min-width: 100%;
-    }
-
-    .bottom {
-        bottom: 0;
-        z-index: 2;
-        width: 100%;
-    }
-
-    .phone {
-    
-        left: 0;
-        height: 70%;
-        bottom: 0;
-    
-    }
-
-    .leaf {
-        top: 60px;
-        left: 460px;
-    }
-
-    .berry_phone {
-        right: 150px;
-        top: 300px;
-    }
-    
-.text__content {
-    max-width: 624px;
-    margin-top: 200px;
-    position: absolute;
-    right: 92px;
-    top: 130px;
-
-    .btn_top {
-        display: inline;
-        background-color: #fff;
-        color: silver;
-        padding: 10px 20px;
-        border-radius: 10px;
-        text-align: center;
-        
-    }
-
-    .text {
+        top: -65px;
+        font-family: 'Josefin Sans';
+        font-style: normal;
         font-weight: 700;
-        font-size: 48px;
-        margin: 30px 0;
-        line-height: 40px;
+        font-size: 36px;
+        line-height: 62px;
+        /* identical to box height, or 172% */
+
+
+        color: rgba(255, 255, 255, 0.75);
     }
+}
 
-    .text_bottom {
+.product {
+    max-width: 258px;
+    border-radius: 10px;
+    line-height: 0;
 
-        font-size: 24px;
-        margin-bottom: 40px;
+    .content__product {
         text-align: left;
-        opacity: 0.7;
+        background-color: rgba(255, 255, 255, 0.2);
+        padding: 17px;
+        border-radius: 10px;
+        .title {
+            font-family: 'Josefin Sans';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 18px;
+            margin-top: 14px;
+
+
+            color: rgba(255, 255, 255, 0.75);
+        }
+
+        .catigory {
+            font-family: 'Josefin Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 12px;
+            /* identical to box height */
+
+            text-transform: capitalize;
+            margin: 20px 0;
+            color: rgba(255, 255, 255, 0.6);
+        }
+
+        .price__ {
+
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            align-items: center;
+            margin: 20px 0;
+
+
+            span {
+                font-family: 'Poppins';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 12px;
+                line-height: 18px;
+                text-transform: capitalize;
+
+                color: #FFFFFF;
+            }
+
+            .price {
+                display: flex;
+                gap: 5px;
+                align-items: center;
+                font-family: 'Poppins';
+                font-style: normal;
+                font-weight: 600;
+                font-size: 16px;
+                line-height: 24px;
+
+                color: #FFFFFF;
+
+                img {
+                    height: 24px;
+                    width: 15px;
+                }
+            }
+        }
     }
 
-    .container_text__bottom {
+    .btn_like__bye {
         display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
         align-items: center;
 
-        .btn {
-            padding: 20px 30px;
-            background-color: #FED84C;
-            color: #2E363E;
-            border-radius: 10px;
-
-
+        img {
+            height: 20px;
+            width: 20px;
         }
 
-        .text__bot {
-            font-size: 15px;
-            padding: 20px;
-            text-align: left;
-            opacity: 0.7;
+        .btn__ {
+            border-radius: 5px;
+            padding: 5px 17px;
+            background-color: #FDC500;
+            color: #000000;
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 22px;
+            /* identical to box height */
+
+            text-align: center;
+
+            color: #000000;
         }
     }
 }
+
+.subscribe {
+    margin-top: 128px;
+
+    .title {
+        font-family: 'Josefin Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 48px;
+        line-height: 62px;
+        /* identical to box height, or 129% */
+
+        text-align: center;
+        color: rgba(255, 255, 255, 0.75);
+    }
+
+    .text {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 28px;
+        /* or 156% */
+
+        text-align: center;
+        margin-top: 6px;
+        color: rgba(255, 255, 255, 0.5);
+        padding: 0 329px;
+    }
+}
+
+.input-group {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    margin-top: 39px;
+}
+
+.input {
+    border: solid 1.5px #9e9e9e;
+    width: 100%;
+    border-radius: 50px;
+    background: none;
+    padding: 1rem;
+    font-size: 1rem;
+    color: #f5f5f5;
+    transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
+}
+
+.user-label {
+    position: absolute;
+    left: 93px;
+    color: #e8e8e8;
+    pointer-events: none;
+    transform: translateY(1rem);
+    transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input:focus,
+input:valid {
+    outline: none;
+    border: 1.5px solid #1a73e8;
+}
+
+.input:focus~label,
+input:valid~label {
+    transform: translateY(-50%) scale(0.8);
+    background-color: #212121;
+    padding: 0 .2em;
+    color: #2196f3;
+}
+.send__input {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background-color: #fff;
+    color: #000000;
+    font-size: 18px;
+    border-radius: 50px;
+    padding: 15px 39px;
 }
