--- a/scss.scss
+++ b/scss.scss
@@ -50,6 +50,38 @@ img {
     background: linear-gradient(108.13deg, #320000 1%, #0F0323 37.66%, #322204 72.27%, #000230 98.74%);
 }
 
+.btn {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 28px;
+    /* identical to box height, or 156% */
+
+
+    color: rgba(255, 255, 255, 0.75);
+    margin-bottom: 61px;
+
+    img {
+        width: 40px;
+        height: 10px;
+    }
+}
+
+.text {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    /* or 175% */
+    margin: 25px 0;
+    letter-spacing: -0.02em;
+
+    color: rgba(255, 255, 255, 0.75);
+
+}
+
 .top {
     display: flex;
     align-items: center;
@@ -170,6 +202,7 @@ img {
         background-color: rgba(255, 255, 255, 0.2);
         padding: 17px;
         border-radius: 10px;
+
         .title {
             font-family: 'Josefin Sans';
             font-style: normal;
@@ -310,7 +343,7 @@ img {
     font-size: 1rem;
     color: #f5f5f5;
     transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
- 
+
 }
 
 .user-label {
@@ -335,6 +368,7 @@ input:valid~label {
     padding: 0 .2em;
     color: #2196f3;
 }
+
 .send__input {
     position: absolute;
     right: 0;
@@ -344,4 +378,182 @@ input:valid~label {
     font-size: 18px;
     border-radius: 50px;
     padding: 15px 39px;
+}
+
+.email {
+    max-width: 700px;
+    margin: 0 auto;
+    margin-bottom: 147px;
+}
+
+.container__marketplace {
+    display: flex;
+    height: 800px;
+    justify-content: space-around;
+    background: rgba(255, 255, 255, 0.07);
+
+    .left {
+        max-width: 590px;
+        margin-top: 188px;
+
+        .title {
+
+            font-family: 'Josefin Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 48px;
+            line-height: 62px;
+            /* or 129% */
+
+
+            color: rgba(255, 255, 255, 0.75);
+        }
+
+        .text {
+            max-width: 482px;
+            opacity: 0.7;
+        }
+    }
+
+    .right {
+
+        position: relative;
+
+        .blockchain_1,
+        .central_bank_,
+        .rectangle_,
+        .rectangle__bk,
+        .rectangle__bk2 {
+            width: unset;
+            height: unset;
+            position: absolute;
+        }
+
+        .blockchain_1 {
+            top: 82px;
+            right: -70px;
+            z-index: 2;
+        }
+
+        img.rectangle__bk {
+            left: -424px;
+            z-index: 1;
+            top: 77px;
+        }
+
+        .central_bank_ {
+
+            top: 399px;
+            right: 363px;
+            z-index: 2;
+
+        }
+
+        img.rectangle__bk2 {
+            top: 412px;
+            right: 369px;
+            z-index: 1;
+        }
+
+        .rectangle_ {
+            bottom: 21px;
+            right: 187px;
+        }
+    }
+}
+
+.slider__bottom {
+    // display: flex;
+    // gap: 31px;
+    margin-bottom: 125px;
+
+    .title {
+        font-family: 'Josefin Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 62px;
+        /* identical to box height, or 172% */
+
+
+        color: rgba(255, 255, 255, 0.75);
+    }
+
+    .text {
+        max-width: 288px;
+        font-family: 'Josefin Sans';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 28px;
+        /* or 156% */
+        margin: 22px 0;
+
+        color: rgba(255, 255, 255, 0.75);
+
+    }
+
+    .content {
+        padding: 5px;
+    }
+
+    .post {
+        img {
+            width: unset;
+            height: unset;
+        }
+    }
+
+    .conteiner__title {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .post__slide {
+        display: flex;
+        gap: 31px;
+    }
+}
+
+footer {
+    border-top: 1px solid #958F8F;
+padding: 58px 0 65px 0;
+    .title {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 36px;
+        /* identical to box height */
+
+        text-transform: capitalize;
+
+        color: #FFFFFF;
+       
+    }
+    img {
+        height: unset;
+        width: unset;
+    }
+    .soc__buttons {
+        display: flex;
+        gap: 15px;
+        margin-top: 26px;
+    }
+    .row {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 50px;
+    }
+    .menu li:first-child,.menu__info li:first-child{
+        margin-bottom: 11px;
+    }
+    .menu li,.menu__info li{
+    line-height: 35px;
+    }
+    ul, li {
+        list-style: none;
+        /* padding: 0; */
+        margin: 0;
+    }
 }
