--- a/scss.scss
+++ b/scss.scss
@@ -518,7 +518,9 @@ input:valid~label {
 footer {
     border-top: 1px solid #958F8F;
     padding: 58px 0 65px 0;
-
+    .soc__container {
+        position: relative;
+    }
     .title {
         font-family: 'Poppins';
         font-style: normal;
@@ -551,8 +553,10 @@ footer {
     }
     .soc__logo{
         position: absolute;
-        left: 179px;
-        gap: 46px;
+        /* left: 179px; */
+        gap: 48px;
+        margin-left: 12px;
+        top: 0;
     }
     .menu li:first-child,
     .menu__info li:first-child {
@@ -574,12 +578,20 @@ footer {
         margin: 0;
     }
 }
+
 @media (max-width:1345px) {
     .top {
         gap: 31px;
     }
+    .container__marketplace {
+        height: 100%;
+    }
     .container__marketplace .right {
       display: none;
+    }
+    .container__marketplace .left {
+        max-width: 590px;
+        margin: 100px 0;
     }
 }
 @media (max-width:1225px) {
@@ -610,10 +622,40 @@ footer {
       flex-wrap: wrap;
     }
 }
+@media (max-width:588px) {
+    .container__marketplace .left {
+        text-align: center;
+    }
+    .text {
+           margin: 25px auto; 
+    }
+}
 @media (max-width:479px) {
     .top .title {
       
         font-size: 15vw;
      
+    }
+    .user-label {
+     left: 19px;
+    
+    }
+
+    footer .left{
+        display: none;
+    }
+}
+@media (max-width:384px) {
+    .post__slide {
+        .post {
+            img{
+                width: 100%;
+            }
+        }
+        .price {
+            img {
+                width: unset;
+            }
+        }
     }
 }
