--- a/scss.css
+++ b/scss.css
@@ -77,6 +77,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 20px;
 }
 .top .btn {
   font-family: 'Poppins';
