--- a/scss.scss
+++ b/scss.scss
@@ -86,7 +86,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+gap: 20px;
 
     .btn {
         font-family: 'Poppins';
