--- a/scss.scss
+++ b/scss.scss
@@ -191,14 +191,19 @@ gap: 20px;
         color: rgba(255, 255, 255, 0.75);
     }
 }
+.slick-slide {
 
+    margin: 0 20px;
+}
 .product {
     max-width: 100%;
-   
-    margin-left: 42px;
+    &:not:first-child{
+        margin-left: 42px;
+    }
+    
     border-radius: 10px;
     line-height: 0;
-
+    
     .content__product {
         text-align: left;
         background-color: rgba(255, 255, 255, 0.2);
@@ -612,10 +617,23 @@ footer {
     }
 }
 .visible-lg  {
+    position: absolute;
     img{
         width: unset;
         height: unset;
     }  
+   
+}
+.slider__main {
+    margin-top: 20px;
+}
+.slick-next {
+    top: -30px;
+    right: 0;
+}
+.slick-prev {
+    top: -30px;
+    right: 30px;
 }
 .post__slide {
     .post {
