--- a/scss.scss
+++ b/scss.scss
@@ -208,7 +208,7 @@ gap: 20px;
         text-align: left;
         background-color: rgba(255, 255, 255, 0.2);
         padding: 17px;
-        border-radius: 10px;
+        border-radius: 0 0 10px 10px;
 
         .title {
             font-family: 'Josefin Sans';
