--- a/scss.css
+++ b/scss.css
@@ -159,6 +159,11 @@ img {
   margin: 0 20px;
 }
 
+.active_slick {
+  transform: scale(1.5);
+  transition: all .3s;
+}
+
 .product {
   max-width: 100%;
   border-radius: 10px;
