--- a/scss.scss
+++ b/scss.scss
@@ -195,6 +195,10 @@ gap: 20px;
 
     margin: 0 20px;
 }
+.active_slick {
+    transform: scale(1.5);
+    transition: all .3s;
+}
 .product {
     max-width: 100%;
     &:not:first-child{
